--- a/iconpage.html
+++ b/iconpage.html
@@ -69,7 +69,7 @@
 
 <p>Witch Hat by Anton Barbarov from the Noun Project. Magic potion by Chris Homan from the Noun Project. Poor by auttapol from the Noun Project. expulsion by Nithinan Tatah from the Noun Project. Community by Adrien Coquet from the Noun Project</p>
 
-<p style="text-align: center;"><a href="landingpage.html">BACK TO MAIN PAGE</a> </p>
+<p style="text-align: center;"><a href="https://arnopedram.github.io/home/">BACK TO MAIN PAGE</a> </p>
 
 </body>
 </html>
